package lab08.Ex2_Decorator;

public interface TextInterface {
    public boolean hasNext();
    public String next();
}

